# PECS-Renderer

./: .gitignore  CMakeLists.txt  README.md
Playground/: main.cpp
include/glad/: glad.c  glad.h
shaders/: PosNormUVVert.glsl
src/: RenderUtil.cpp  RenderUtil.hpp  TestRenderer.cpp  Util.cpp  Util.hpp
src/Components/: Camera.hpp  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  Light.cpp  Light.hpp  Renderable.hpp  Transform.hpp
src/Engine/: Input.cpp  Input.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/Objects/: Object.cpp  Object.hpp
src/Systems/: CameraController.cpp  CameraController.hpp  RenderPipeline.cpp  RenderPipeline.hpp  System.cpp  System.hpp
